# MusicPlayerAPI

./: README.md  gradle.properties
app/: build.gradle
app/src/androidTest/java/com/lzm/music/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MAudio.cpp  MAudio.h  MCallJava.cpp  MFFmpeg.cpp  MFFmpeg.h  MPlaystatus.cpp  MPlaystatus.h  MQueue.cpp  native-lib.cpp
app/src/main/java/com/lzm/music/: EGLSurfaceActivity.java  EGLTest.java  LivePush.java  MainActivity.java  opengltest.java
app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libswresample.pc
app/src/main/jniLibs/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_e_g_l_surface.xml  activity_e_g_l_test.xml  activity_live_push.xml  activity_main.xml  opengltest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lzm/music/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/com/lzm/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: AndroidLog.h  CMakeLists.txt  MAudio.cpp  MAudio.h  MBufferQueue.cpp  MBufferQueue.h  MCallJava.cpp  MCallJava.h  MFFmpeg.cpp  MFFmpeg.h  MPcmBean.cpp  MPcmBean.h  MPlaystatus.h  MQueue.cpp  MQueue.h  MVideo.cpp  MVideo.h  native-lib.cpp
player/src/main/cpp/include/: STTypes.h
player/src/main/cpp/jniLibs/arm64-v8a/lib/pkgconfig/: libavfilter.pc  libavutil.pc
player/src/main/cpp/jniLibs/arm64-v8a/pkgconfig/: libavformat.pc  libswscale.pc
player/src/main/java/com/lzm/player/: Demo.java  TimeInfo.java
player/src/main/java/com/lzm/player/listener/: MOnCompleteListener.java  MOnErrorListener.java  MOnLoadListener.java  MOnPauseResumeListener.java  MOnPcmInfoListener.java  MOnPreparedListener.java  MOnRecordTimeListener.java  MOnTimeInfoListener.java  MOnValueDBListener.java
player/src/main/java/com/lzm/player/log/: mylog.java
player/src/main/java/com/lzm/player/muteenum/: MuteEnum.java
player/src/main/java/com/lzm/player/myplayer/: MCameraX.java  Mplayer.java
player/src/main/java/com/lzm/player/opengl/: LEGLHelper.java  LEGLSurfaceView.java  LGLSurfaceView.java  LRender.java  LTextureRender.java  LTextureView.java  MGLSurfaceView.java  MRender.java  MShaderUtil.java
player/src/main/java/com/lzm/player/util/: MTimeUtil.java  MVideoSupportUtil.java
player/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
player/src/test/java/com/lzm/player/: ExampleUnitTest.java
